# SpatioTemporalDithering

./: .gitignore  README.md  dependencies.xml
Source/Falcor/: CMakeLists.txt
Source/Falcor/RenderGraph/: RenderPassStandardFlags.h
Source/Falcor/Scene/: Scene.slang
Source/Mogwai/: Mogwai.cpp
Source/RenderPasses/: CMakeLists.txt
Source/RenderPasses/ATAA/: ATAA.cpp  ATAA.h  CMakeLists.txt
Source/RenderPasses/AccumulatePass/: AccumulatePass.cpp  AccumulatePass.h
Source/RenderPasses/DLSSPass/: DLSSPass.cpp  DLSSPass.h  NGXWrapper.cpp  NGXWrapper.h
Source/RenderPasses/DecimaTAA/: CMakeLists.txt  DecimaTAA.cpp  DecimaTAA.h  Sharpen.ps.slang  TAA.ps.slang
Source/RenderPasses/DitherTAA/: CMakeLists.txt  DitherTAA.cpp  DitherTAA.h  DitherTAA.ps.slang
Source/RenderPasses/DitherVBuffer/: CMakeLists.txt  Dither.slangh  DitherVBuffer.cpp  DitherVBuffer.h  DitherVBuffer.rt.slang  MidpointGenerator.h  PermutationLookup.h  SobolGenerator.h  TransparencyWhitelist.h
Source/RenderPasses/FSR/: FSR.cpp
Source/RenderPasses/RayReconstructionPass/: CMakeLists.txt  NGXWrapper.cpp  NGXWrapper.h  RayReconstructionPass.cpp  RayReconstructionPass.h
data/dither/: Dither3D_4x4.dds  Dither3D_8x8.dds  bayer64.dds  bayer_matrix.dds  blue_bayer.dds  bluenoise1024.dds  perlin1024.dds  poisson1024.dds  whitenoise1024.dds
scripts/: BaselineRaster.py  DitherAO.py  DitherDemo.py  DitherMinimal.py  DitherRTAO.py  DitherRaster.py  DitherV1.py  MinimalPathTracerDLSS.py  MultiResTransparency.py  MultiResTransparencyTAA.py  RayTransparency.py  SVAO.py  StochasticVBuffer.py  VBufferLight.py
(+88 files in other folders)
